# ddlitlab2024

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/actions/setup-repo/: action.yml
.github/workflows/: pre-commit.yml  test-dataset.yml  unit-tests.yml
ddlitlab2024/: __init__.py
ddlitlab2024/dataset/: dummy_data.py  models.py  pytorch.py  recording2mcap.py  vizualization.ipynb
ddlitlab2024/dataset/cli/: args.py  run.py
ddlitlab2024/dataset/converters/: game_state_converter.py  image_converter.py  synced_data_converter.py
ddlitlab2024/dataset/imports/: data.py
ddlitlab2024/dataset/imports/strategies/: b_human.py  bit_bots.py  bitbots.py
ddlitlab2024/dataset/migrations/: env.py
ddlitlab2024/dataset/migrations/versions/: 14ae0e795470_add_nao_elbow_joint.py  3f1574e89695_base_dataset.py
ddlitlab2024/ml/inference/: plot.py  ros.py
ddlitlab2024/ml/model/: model.py
ddlitlab2024/ml/model/encoder/: base.py  game_state.py  image.py  imu.py  joint.py
ddlitlab2024/ml/training/: distill.py  train.py
ddlitlab2024/ml/training/config/: decoder_only.yaml  default.yaml  larger_model.yaml  larger_model_distill.yaml  sim_scratch.yaml
tests/dataset/: conftest.py
tests/dataset/converter/: test_synced_data_converter.py
tests/dataset/resampling/: test_max_rate_resampler.py  test_previous_interpolation_resampler.py
