[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ddlitlab2024"
version = "0.0.1"
readme = "README.md"
repository = "https://github.com/bit-bots/ddlitlab2024"
authors = ["Florian Vahl", "Jan Gutsche", "Joern Griepenburg"]
description = ""

[tool.poetry.dependencies]
python = "^3.10"
diffusers = "^0.31.0"
ema-pytorch = "^0.7.3"
matplotlib = "^3.9.2"
numpy = "^2.1.2"
pandas = "^2.2.3"
rich = "^13.9.3"
sqlalchemy = "^2.0.36"
torch = "^2.5.0"
torchinfo = "^1.8.0"
torchvision = "^0.20.1"
tqdm = "^4.66.5"
transforms3d = "^0.4.2"
typed-argument-parser = "^1.10.1"
mcap = "^1.2.1"
mcap-ros2-support = "^0.5.5"
opencv-python = "^4.10.0.84"
profilehooks = "^1.13.0"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
ruff = "^0.8.0"

[tool.ruff]
fix = true
line-length = 120

[tool.ruff.lint]
# Additionally enable the following rules
# - pyflakes (`F`)
# - pycodestyle errors (`E`)
# - pycodestyle warnings (`W`)
# - flake8-bugbear warnings (`B`)
# - isort import sorting (`I`)
# - pep8-naming convenrtions (`N`)
# - pyupgrade prefer newer language constructs (`UP`)
select = ["F", "E", "B", "W", "I", "N", "UP"]

[tool.poetry.scripts]
cli = "ddlitlab2024.dataset.cli.run:main"
